--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                 <img src="walkover.png" alt="Our Client">
             </div>
             <div class="client-item">
-                <img src="Skype.png" alt="Skype Our Client">
+                <img src="skype.png" alt="Skype Our Client">
             </div>
           
             <div class="client-item">
